fixes for login page in dark mode

--- a/httpdocs/css/dark-mode.css
+++ b/httpdocs/css/dark-mode.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, #particles-js {
   background-color: #121212 !important;
   color: #e2e2e2;
 }
