--- a/httpdocs/css/ntopng.css
+++ b/httpdocs/css/ntopng.css
@@ -1004,8 +1004,17 @@ td.dashboard-counter {
   padding-bottom: 0!important;
 }
 
-
 nav.navbar {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  border-radius: $border-radius;
 }
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #f5f5f5;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+} /* ---- stats.js ---- */
